test/mutation_analysis/s0072_edit_distance/hafis/starchat/mutants/38/result.txt
./test/mutation_analysis/s0072_edit_distance/hafis/starchat/mutants/38/Solution.java:40: error: not a statement
                                ? 1 + Math.min(pre, Math.min(dp[j], dp[j - 1]))
                                ^
1 error
